-- DDL untuk diimpor ke Oracle SQL Developer Data Modeler.
-- Struktur mengikuti tabel utama Sistem Inventaris DISKEBUD.
-- NIP dan jabatan dimasukkan sebagai rancangan baru pada tabel users.
-- Tabel teknis Laravel seperti cache, jobs, sessions, dan password reset
-- sengaja tidak disertakan.

CREATE TABLE users (
    id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY,
    nip VARCHAR2(30),
    name VARCHAR2(255) NOT NULL,
    email VARCHAR2(255) NOT NULL,
    email_verified_at TIMESTAMP NULL,
    password VARCHAR2(255) NOT NULL,
    role VARCHAR2(20) DEFAULT 'staff' NOT NULL,
    jabatan VARCHAR2(100) NULL,
    bidang VARCHAR2(100) NULL,
    remember_token VARCHAR2(100) NULL,
    created_at TIMESTAMP NULL,
    updated_at TIMESTAMP NULL,
    CONSTRAINT pk_users PRIMARY KEY (id),
    CONSTRAINT uq_users_nip UNIQUE (nip),
    CONSTRAINT uq_users_email UNIQUE (email),
    CONSTRAINT ck_users_role
        CHECK (role IN ('admin', 'pimpinan', 'staff'))
);

CREATE TABLE bidang (
    id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY,
    nama_bidang VARCHAR2(100) NOT NULL,
    created_at TIMESTAMP NULL,
    updated_at TIMESTAMP NULL,
    CONSTRAINT pk_bidang PRIMARY KEY (id),
    CONSTRAINT uq_bidang_nama UNIQUE (nama_bidang)
);

CREATE TABLE ruangan (
    id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY,
    kode_ruangan VARCHAR2(20) NOT NULL,
    nama_ruangan VARCHAR2(100) NOT NULL,
    lantai VARCHAR2(10) NULL,
    created_at TIMESTAMP NULL,
    updated_at TIMESTAMP NULL,
    deleted_at TIMESTAMP NULL,
    CONSTRAINT pk_ruangan PRIMARY KEY (id),
    CONSTRAINT uq_ruangan_kode UNIQUE (kode_ruangan)
);

CREATE TABLE bidang_ruangan (
    id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY,
    bidang_id NUMBER(19) NOT NULL,
    ruangan_id NUMBER(19) NOT NULL,
    created_at TIMESTAMP NULL,
    updated_at TIMESTAMP NULL,
    CONSTRAINT pk_bidang_ruangan PRIMARY KEY (id),
    CONSTRAINT uq_bidang_ruangan UNIQUE (bidang_id, ruangan_id),
    CONSTRAINT fk_br_bidang FOREIGN KEY (bidang_id)
        REFERENCES bidang (id) ON DELETE CASCADE,
    CONSTRAINT fk_br_ruangan FOREIGN KEY (ruangan_id)
        REFERENCES ruangan (id) ON DELETE CASCADE
);

CREATE TABLE barang (
    id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY,
    kode_barang VARCHAR2(50) NOT NULL,
    nama_barang VARCHAR2(150) NOT NULL,
    jenis_kib VARCHAR2(10) NULL,
    bidang_id NUMBER(19) NOT NULL,
    ruangan_id NUMBER(19) NOT NULL,
    tahun_perolehan NUMBER(4) NULL,
    tanggal_perolehan DATE NULL,
    kondisi VARCHAR2(20) DEFAULT 'baik' NOT NULL,
    status VARCHAR2(20) DEFAULT 'aktif' NOT NULL,
    harga_perolehan NUMBER(15,2) DEFAULT 0 NOT NULL,
    qr_code VARCHAR2(255) NULL,
    foto VARCHAR2(255) NULL,
    created_by NUMBER(19) NULL,
    created_at TIMESTAMP NULL,
    updated_at TIMESTAMP NULL,
    deleted_at TIMESTAMP NULL,
    CONSTRAINT pk_barang PRIMARY KEY (id),
    CONSTRAINT uq_barang_kode UNIQUE (kode_barang),
    CONSTRAINT ck_barang_jenis_kib
        CHECK (jenis_kib IS NULL OR jenis_kib = 'B'),
    CONSTRAINT ck_barang_kondisi
        CHECK (kondisi IN ('baik', 'rusak_ringan', 'rusak_berat')),
    CONSTRAINT ck_barang_status
        CHECK (status IN ('aktif', 'dihapus', 'dipinjam')),
    CONSTRAINT fk_barang_bidang FOREIGN KEY (bidang_id)
        REFERENCES bidang (id),
    CONSTRAINT fk_barang_ruangan FOREIGN KEY (ruangan_id)
        REFERENCES ruangan (id),
    CONSTRAINT fk_barang_creator FOREIGN KEY (created_by)
        REFERENCES users (id) ON DELETE SET NULL
);

CREATE TABLE kib_b_peralatan_mesin (
    id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY,
    barang_id NUMBER(19) NOT NULL,
    merk_type VARCHAR2(100) NULL,
    ukuran VARCHAR2(100) NULL,
    bahan VARCHAR2(100) NULL,
    no_seri VARCHAR2(100) NULL,
    spesifikasi CLOB NULL,
    created_at TIMESTAMP NULL,
    updated_at TIMESTAMP NULL,
    CONSTRAINT pk_kib_b PRIMARY KEY (id),
    CONSTRAINT fk_kib_b_barang FOREIGN KEY (barang_id)
        REFERENCES barang (id) ON DELETE CASCADE
);

CREATE TABLE mutasi_barang (
    id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY,
    barang_id NUMBER(19) NOT NULL,
    ruangan_asal_id NUMBER(19) NOT NULL,
    ruangan_tujuan_id NUMBER(19) NOT NULL,
    tanggal_mutasi DATE NOT NULL,
    alasan CLOB NULL,
    kondisi_sebelum VARCHAR2(20) NOT NULL,
    kondisi_sesudah VARCHAR2(20) NOT NULL,
    dilakukan_oleh NUMBER(19) NULL,
    created_at TIMESTAMP NULL,
    updated_at TIMESTAMP NULL,
    CONSTRAINT pk_mutasi_barang PRIMARY KEY (id),
    CONSTRAINT ck_mutasi_kondisi_sebelum
        CHECK (kondisi_sebelum IN ('baik', 'rusak_ringan', 'rusak_berat')),
    CONSTRAINT ck_mutasi_kondisi_sesudah
        CHECK (kondisi_sesudah IN ('baik', 'rusak_ringan', 'rusak_berat')),
    CONSTRAINT fk_mutasi_barang FOREIGN KEY (barang_id)
        REFERENCES barang (id) ON DELETE CASCADE,
    CONSTRAINT fk_mutasi_ruangan_asal FOREIGN KEY (ruangan_asal_id)
        REFERENCES ruangan (id),
    CONSTRAINT fk_mutasi_ruangan_tujuan FOREIGN KEY (ruangan_tujuan_id)
        REFERENCES ruangan (id),
    CONSTRAINT fk_mutasi_user FOREIGN KEY (dilakukan_oleh)
        REFERENCES users (id) ON DELETE SET NULL
);

CREATE TABLE request_kerusakan (
    id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY,
    barang_id NUMBER(19) NOT NULL,
    tanggal_laporan DATE NOT NULL,
    tingkat_kerusakan VARCHAR2(20) DEFAULT 'ringan' NOT NULL,
    deskripsi_kerusakan CLOB NOT NULL,
    status VARCHAR2(20) DEFAULT 'diajukan' NOT NULL,
    dilaporkan_oleh NUMBER(19) NULL,
    created_at TIMESTAMP NULL,
    updated_at TIMESTAMP NULL,
    CONSTRAINT pk_request_kerusakan PRIMARY KEY (id),
    CONSTRAINT ck_request_tingkat
        CHECK (tingkat_kerusakan IN ('ringan', 'sedang', 'berat')),
    CONSTRAINT ck_request_status
        CHECK (status IN ('diajukan', 'diproses', 'selesai', 'ditolak')),
    CONSTRAINT fk_request_barang FOREIGN KEY (barang_id)
        REFERENCES barang (id) ON DELETE CASCADE,
    CONSTRAINT fk_request_user FOREIGN KEY (dilaporkan_oleh)
        REFERENCES users (id) ON DELETE SET NULL
);

CREATE TABLE pemeliharaan (
    id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY,
    barang_id NUMBER(19) NOT NULL,
    request_kerusakan_id NUMBER(19) NULL,
    tanggal DATE NOT NULL,
    jenis_pemeliharaan VARCHAR2(100) NOT NULL,
    deskripsi CLOB NULL,
    biaya NUMBER(15,2) DEFAULT 0 NOT NULL,
    kondisi_sesudah VARCHAR2(20) NOT NULL,
    dilakukan_oleh NUMBER(19) NULL,
    created_at TIMESTAMP NULL,
    updated_at TIMESTAMP NULL,
    CONSTRAINT pk_pemeliharaan PRIMARY KEY (id),
    CONSTRAINT ck_pemeliharaan_kondisi
        CHECK (kondisi_sesudah IN ('baik', 'rusak_ringan', 'rusak_berat')),
    CONSTRAINT fk_pemeliharaan_barang FOREIGN KEY (barang_id)
        REFERENCES barang (id) ON DELETE CASCADE,
    CONSTRAINT fk_pemeliharaan_request FOREIGN KEY (request_kerusakan_id)
        REFERENCES request_kerusakan (id) ON DELETE SET NULL,
    CONSTRAINT fk_pemeliharaan_user FOREIGN KEY (dilakukan_oleh)
        REFERENCES users (id) ON DELETE SET NULL
);

CREATE TABLE laporan_inventaris (
    id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY,
    jenis_laporan VARCHAR2(100) NOT NULL,
    periode VARCHAR2(20) NOT NULL,
    bulan NUMBER(2) NULL,
    tahun NUMBER(4) NOT NULL,
    file_laporan VARCHAR2(255) NULL,
    dibuat_oleh NUMBER(19) NULL,
    created_at TIMESTAMP NULL,
    updated_at TIMESTAMP NULL,
    CONSTRAINT pk_laporan_inventaris PRIMARY KEY (id),
    CONSTRAINT ck_laporan_periode
        CHECK (periode IN ('bulanan', 'triwulanan', 'semesteran', 'tahunan')),
    CONSTRAINT ck_laporan_bulan
        CHECK (bulan IS NULL OR bulan BETWEEN 1 AND 12),
    CONSTRAINT fk_laporan_user FOREIGN KEY (dibuat_oleh)
        REFERENCES users (id) ON DELETE SET NULL
);

CREATE TABLE import_log (
    id NUMBER(19) GENERATED BY DEFAULT AS IDENTITY,
    nama_file VARCHAR2(255) NOT NULL,
    tipe_import VARCHAR2(255) NULL,
    jenis_kib VARCHAR2(10) DEFAULT 'B' NOT NULL,
    total_baris NUMBER(10) DEFAULT 0 NOT NULL,
    berhasil NUMBER(10) DEFAULT 0 NOT NULL,
    gagal NUMBER(10) DEFAULT 0 NOT NULL,
    duplikat NUMBER(10) DEFAULT 0 NOT NULL,
    status VARCHAR2(20) DEFAULT 'sukses' NOT NULL,
    catatan_error CLOB NULL,
    detail_error CLOB NULL,
    path_file VARCHAR2(255) NULL,
    ip_address VARCHAR2(45) NULL,
    waktu_selesai TIMESTAMP NULL,
    diupload_oleh NUMBER(19) NULL,
    created_at TIMESTAMP NULL,
    updated_at TIMESTAMP NULL,
    CONSTRAINT pk_import_log PRIMARY KEY (id),
    CONSTRAINT ck_import_jenis_kib
        CHECK (jenis_kib = 'B'),
    CONSTRAINT ck_import_status
        CHECK (status IN ('sukses', 'sebagian', 'gagal')),
    CONSTRAINT fk_import_user FOREIGN KEY (diupload_oleh)
        REFERENCES users (id) ON DELETE SET NULL
);

CREATE TABLE notifications (
    id VARCHAR2(36) NOT NULL,
    type VARCHAR2(255) NOT NULL,
    notifiable_type VARCHAR2(255) NOT NULL,
    notifiable_id NUMBER(19) NOT NULL,
    data CLOB NOT NULL,
    read_at TIMESTAMP NULL,
    created_at TIMESTAMP NULL,
    updated_at TIMESTAMP NULL,
    CONSTRAINT pk_notifications PRIMARY KEY (id),
    CONSTRAINT ck_notifications_data_json CHECK (data IS JSON)
);

-- Relasi notifications tidak dibuat sebagai foreign key karena notifiable
-- merupakan relasi polymorphic Laravel.

CREATE INDEX idx_users_role
    ON users (role);

CREATE INDEX idx_users_bidang
    ON users (bidang);

CREATE INDEX idx_ruangan_nama
    ON ruangan (nama_ruangan);

CREATE INDEX idx_barang_status_kondisi
    ON barang (status, kondisi);

CREATE INDEX idx_barang_tahun
    ON barang (tahun_perolehan);

CREATE INDEX idx_barang_tanggal
    ON barang (tanggal_perolehan);

CREATE INDEX idx_mutasi_tanggal
    ON mutasi_barang (tanggal_mutasi);

CREATE INDEX idx_mutasi_barang_tanggal
    ON mutasi_barang (barang_id, tanggal_mutasi);

CREATE INDEX idx_request_status_tanggal
    ON request_kerusakan (status, tanggal_laporan);

CREATE INDEX idx_pemeliharaan_tanggal
    ON pemeliharaan (tanggal);

CREATE INDEX idx_laporan_periode
    ON laporan_inventaris (periode, tahun, bulan);

CREATE INDEX idx_import_status
    ON import_log (status, created_at);

CREATE INDEX idx_notifications_notifiable
    ON notifications (notifiable_type, notifiable_id);

COMMENT ON COLUMN users.nip IS
    'NIP pengguna. Rancangan baru dan belum tersedia pada migration Laravel.';

COMMENT ON COLUMN users.jabatan IS
    'Jabatan pengguna. Rancangan baru dan belum tersedia pada migration Laravel.';

COMMENT ON COLUMN users.bidang IS
    'Bidang pengguna masih disimpan sebagai teks, belum foreign key ke tabel bidang.';

COMMENT ON COLUMN kib_b_peralatan_mesin.barang_id IS
    'Belum unique; database masih memungkinkan beberapa detail KIB B untuk satu barang.';

COMMENT ON COLUMN pemeliharaan.request_kerusakan_id IS
    'Belum unique; database masih memungkinkan beberapa pemeliharaan untuk satu request.';
